--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,21 +1,22 @@
 <div id="home">
   <div class="container">
     <div class="row">
-      <div class="col-8 offset-2">
+      <div class="col-8 offset-2 text-color">
         <h1>{{msg}}</h1>
-        <h2>This is our AWESOME Home Page!</h2>
+        <div class="transparent-box">
+          <h2>This app is for searching for ingredients to figure out their nutritional value and also for looking up recipes by entering a few ingredients. Please search bar above to look for an ingredient, or click "recipe" to be taken to that page.</h2>
+        </div>
+                <!-- This is where you search -->
         <form class="clearfix mb-4" action="POST">
           <div class="form-group">
-            <label for="example-text">AWESOME Text</label>
+            <h3>Sample Recipe:</h3>
             <input type="text" id="example-text" class="form-control" aria-describedby="example-text" placeholder="Enter Example Text">
-          </div>
-          <div class="form-group">
-            <label for="example-description">AWESOME Description</label>
-            <textarea class="form-control" id="example-description" aria-describedby="example-description" placeholder="Enter Example Description"></textarea>
           </div>
           <button id="submit" class="btn btn-primary float-right">Submit</button>
         </form>
-        <h3>Examples:</h3>
+                <!-- end -->
+
+        <h3>Sample Ingredients</h3>
         <ul id="example-list" class="list-group">
           {{#each examples}}
           <li data-id="{{this.id}}" class="list-group-item">
