Little bit of clean-up going on.
Co-authored-by: Jeff-Ashear <kinesthesiac@gmail.com>

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -18,7 +18,7 @@
                 <!-- end -->
 
         <h3>Sample Ingredients</h3>
-        <h1>USER HERE : {{user}}</h1>
+        <h1>Hello {{userName}}</h1>
 
          
         <ul id="food-list" class="list-group">
@@ -32,11 +32,11 @@
 
 
 
-{{!--           
+          
           {{#each examples}}
           <li data-id="{{this.id}}" class="list-group-item">
             <a href="example/{{this.id}}">{{this.text}}</a>
-           <
+           
             <button class="btn btn-danger float-right delete">ｘ</button>
           </li>
 
@@ -46,7 +46,7 @@
         <div class="col recipe">
 
         </div> --}}
-          {{!-- {{/each}} --}}
+          {{/each}}
         </ul>
       </div>
     </div>
@@ -55,9 +55,7 @@
   
     <iframe src="beep" height=400 width=800></iframe>
   </div>
-  <div>
-    <button id="natesButton">Nate's Button is Not a Lever</button>
-  </div>
+  
 </div>
 
 
