--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -32,16 +32,16 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Dropdown
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="recipe">Recipe Search</a>
+          <a class="dropdown-item" href="/recipe">Recipe Search</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="ingredients">Ingredient Search</a>
+          <a class="dropdown-item" href="/ingredients">Ingredient Search</a>
         </div>
       </li>
       <li class="nav-item">
