Keep on development branch only!
Co-authored-by: Destiny Clarke <ynitsedekralc@gmail.com>
Co-authored-by: Jeff-Ashear <kinesthesiac@gmail.com>
Co-authored-by: aliffbm <aliff.macapinlac@gmail.com>

--- a/views/ingredients.handlebars
+++ b/views/ingredients.handlebars
@@ -6,22 +6,12 @@
         <div class="transparent-box">
           <h2>This is the webpage for searching and seeing about ingredients.</h2>
         </div>
-                <!-- This is where you search -->
-        <form class="clearfix mb-4" action="POST">
-          <div class="form-group">
-            <h3>Sample Recipe:</h3>
-                          
-            <input type="text" id="ingredient" name="ingredient" class="form-control" aria-describedby="example-text" placeholder="Enter Example Text">
-          </div>
-          <button id="submit" class="btn btn-primary float-right">Submit</button>
-        </form>
-                <!-- end -->
 
         <h3>Sample Ingredients</h3>
 
          
         <ul id="food-list" class="list-group">
-
+{{body}}
           {{!-- {{#each_upto foodItems 3}}
             <h1>{{this.title}}</h1>
             <iframe src="{{this.href}}"></iframe>
@@ -54,4 +44,4 @@
 
 
 <script type="/javatextscript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="/js/index.js"></script>
+<script src="/js/ingredients.js"></script>
