--- a/views/ingredients.handlebars
+++ b/views/ingredients.handlebars
@@ -14,6 +14,7 @@
 {{body}}
           {{#each foodItems}}
             <h1>{{this.food_name}}</h1>
+            <button class="btn" id="ingredientsAdd">Add to Favorites</button>
             <h3>Serving Size: {{this.serving_unit}}</h3>
             <h3>Calories:{{this.nf_calories}}</h3>
             <img src="{{this.photo.thumb}}" alt="{{this.food_name}}" width="250px" height="200px">
