--- a/views/recipe.handlebars
+++ b/views/recipe.handlebars
@@ -17,9 +17,13 @@
 
         {{#each foodItems}}
             <h1>{{this.title}}</h1>
-            <h3><a href="{{this.href}}">{{this.href}}</a></h3>
+            <button class="btn" id="recipeAdd">Add to Favorites</button>
+            <div  id="recipeLink">
+            <h4><a href="{{this.href}}">{{this.href}}</a></h4>
+            </div>
             <h3>{{this.ingredients}}</h3>
             <img src="{{this.thumbnail}}" alt="{{this.title}}" width="250px" height="200px">
+            
           {{/each}}
         </ul>
       </div>
