--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -21,7 +21,7 @@
   
 </form>
 <button type="submit" class="btn btn-primary" id="user-Login">Submit</button>
-  <button type="signup" class="btn btn-primary" id="user-Signup">Sign-Up</button>
+  <button type="signup" class="btn btn-primary" id="user-Sign">Sign-Up</button>
 <script type="/javatextscript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="/js/login.js"></script>
 
