--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,10 +1,15 @@
+<style>
+  body {
+    background-image: url('https://res.cloudinary.com/grohealth/image/upload/v1583748171/DCUK/Content/iStock-857145602.jpg');
+  }
+</style>
 <div id="login">
   <div class="container">
     <div class="row">
       <div class="col-8 offset-2 text-color">
         <h1>{{msg}}</h1>
         <div class="transparent-box">
-          <h2>Please log in to you 4ager acount.</h2>
+          <h2>Please log in to you Forager acount.</h2>
         </div>
                 <!-- This is where you log in -->
   <form>
@@ -24,8 +29,4 @@
   <button type="signup" class="btn btn-primary" id="user-Sign">Sign-Up</button>
 <script type="/javatextscript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="/js/login.js"></script>
-
-<script>
-
-</script>
                 <!-- end -->
