--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,3 +1,8 @@
+<style>
+  body {
+    background-image: url('https://cdn.luxuo.com/2014/08/artrepublik-photographs-of-color-coded-food-and-plants-by-emily-blincoe-1024px.jpg');
+  }
+</style>
 <div id="login">
   <div class="container">
     <div class="row">
