--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -27,7 +27,7 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #5de518;">
-  <a class="navbar-brand" href="#"><img src="/assets/img/Forager%20logo.jpg" alt="Logo">Forager</a>
+  <a class="navbar-brand" href="#">Forager</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
