Worked on some favorites issues.  They now post to the db but don't yet render. Slight style changes.
Co-authored-by: Destiny Clarke <ynitsedekralc@gmail.com>
Co-authored-by: justin1732 <justteach17@gmail.com>

--- a/views/recipe.handlebars
+++ b/views/recipe.handlebars
@@ -23,7 +23,7 @@
         {{#each foodItems}}
             <div id="responseItem">
             <h1>{{this.title}}</h1>
-            <button class="btn recipeAdd" data-recipe="{{this.title}}">Add to Favorites</button>
+            <button class="btn recipeAdd" id="recipeAddBtn" data-recipe="{{this.title}}">Add to Favorites</button>
             <div  id="recipeLink">
             <h4><a href="{{this.href}}">{{this.href}}</a></h4>
             </div>
