--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -22,27 +22,28 @@ body {
   background: rgba(128,128,128, 0.5);
   padding: 5px;
 }
+
 #recipeWindow {
   align-items: center;
 }
-#recipeAdd, #ingredientsAdd {
+#recipeAdd, #ingredientsAdd, #recipeAddBtn {
   width: fit-content;
   text-align: center;
-  background-color: blue;
+  background-color: rgb(17, 16, 104);
   color: aliceblue;
   font-weight: bold;
   border-style: solid;
-  border-color: aqua;
+  border-color: rgb(39, 159, 163);
   border-radius: 50px;
   box-shadow: rgb(44, 43, 43) 4px 4px;
 }
 #recipeLink{
   width: fit-content;
   text-align: center;
-  background-color: rgb(255, 255, 255);
+  background-color: rgba(255, 255, 255, 0.7);
   color: aliceblue;
   border-style: solid;
-  border-color: aqua;
+  border-color: rgb(39, 159, 163);
   border-radius: 50px;
   box-shadow: rgb(44, 43, 43) 4px 4px;
   margin: 10px;
@@ -82,4 +83,23 @@ button:hover {
   0% {border-width: 3px}
   50% {border-width: 1px}
   100% {border-width: 3px}
+}
+#recipeLink:hover {
+  font-weight: 900;
+  border-color: rgb(191, 194, 22);
+  border-width: 3px;
+  animation-name: hoverOverLink;
+  animation-duration: 10s;
+  animation-iteration-count: infinite;
+}
+@keyframes hoverOverLink {
+  0% {box-shadow: rgb(44, 43, 43) 4px 4px;}
+  12% {box-shadow: rgb(54, 47, 47) 4px 0px;}
+  25% {box-shadow: rgb(66, 38, 38) 0px 4px;}
+  37% {box-shadow: rgb(59, 43, 95) 0px -4px;}
+  50% {box-shadow: rgb(72, 24, 94) -4px 0px;}
+  62% {box-shadow: rgb(66, 11, 11) -4px -4px;}
+  75% {box-shadow: rgb(52, 25, 78) 0px 4px;}
+  87% {box-shadow: rgb(77, 44, 44) 4px 0px;}
+  100% {box-shadow: rgb(44, 43, 43) 4px 4px;}
 }
