--- a/views/recipe.handlebars
+++ b/views/recipe.handlebars
@@ -25,7 +25,7 @@
             <h1>{{this.title}}</h1>
             <button class="btn recipeAdd" id="recipeAddBtn" data-recipe="{{this.title}}">Add to Favorites</button>
             <div  id="recipeLink">
-            <h4><a href="{{this.href}}">{{this.href}}</a></h4>
+            <h4><a href="{{this.href}}" target="_blank">See This Recipe</a></h4>
             </div>
             <h3>{{this.ingredients}}</h3>
             <img src="{{this.thumbnail}}" alt="{{this.title}}" width="250px" height="200px"><br><br>
