--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -33,17 +33,20 @@ body {
   color: aliceblue;
   font-weight: bold;
   border-style: solid;
-  border-color: rgb(39, 159, 163);
+  border-color: rgb(238, 223, 12);
+  /* border-color: rgb(39, 159, 163); */
   border-radius: 50px;
   box-shadow: rgb(44, 43, 43) 4px 4px;
 }
 #recipeLink{
-  width: fit-content;
+  /* width: fit-content; */
+  overflow: auto;
   text-align: center;
   background-color: rgba(255, 255, 255, 0.7);
   color: aliceblue;
   border-style: solid;
-  border-color: rgb(39, 159, 163);
+  border-color: rgb(238, 223, 12);
+  /* border-color: rgb(17, 117, 121); */
   border-radius: 50px;
   box-shadow: rgb(44, 43, 43) 4px 4px;
   margin: 10px;
@@ -69,11 +72,11 @@ body {
 }
 @keyframes hoverOverTile {
   0% {box-shadow: rgb(153, 110, 233) 2px 2px 25px}
-  50% {box-shadow: rgb(232, 221, 252) 2px 2px 0.5px}
+  50% {box-shadow: rgb(227, 213, 253) 2px 2px 0.5px}
   100% {box-shadow: rgb(153, 110, 233) 2px 2px 25px}
 }
 button:hover {
-  border-color: rgb(139, 67, 221);
+  border-color: rgb(238, 223, 12);
   border-width: 3px;
   animation-name: hoverOverButton;
   animation-duration: 5s;
@@ -86,7 +89,7 @@ button:hover {
 }
 #recipeLink:hover {
   font-weight: 900;
-  border-color: rgb(191, 194, 22);
+  border-color:  rgb(238, 223, 12);
   border-width: 3px;
   animation-name: hoverOverLink;
   animation-duration: 10s;
