Refined the color pallet and animations.

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -29,11 +29,12 @@ body {
 #recipeAdd, #ingredientsAdd, #recipeAddBtn {
   width: fit-content;
   text-align: center;
-  background-color: rgb(17, 16, 104);
+  /* background-color: rgb(17, 16, 104); */
+  background-color: rgb(45, 60, 192);
   color: aliceblue;
   font-weight: bold;
   border-style: solid;
-  border-color: rgb(238, 223, 12);
+  border-color: rgb(238, 204, 12);
   /* border-color: rgb(39, 159, 163); */
   border-radius: 50px;
   box-shadow: rgb(44, 43, 43) 4px 4px;
@@ -42,7 +43,7 @@ body {
   /* width: fit-content; */
   overflow: auto;
   text-align: center;
-  background-color: rgba(255, 255, 255, 0.7);
+  background-color: rgba(255, 255, 255, 0.75);
   color: aliceblue;
   border-style: solid;
   border-color: rgb(238, 223, 12);
@@ -79,13 +80,14 @@ button:hover {
   border-color: rgb(238, 223, 12);
   border-width: 3px;
   animation-name: hoverOverButton;
-  animation-duration: 5s;
+  animation-duration: 7s;
   animation-iteration-count: infinite;
 }
 @keyframes hoverOverButton {
-  0% {border-width: 3px}
-  50% {border-width: 1px}
-  100% {border-width: 3px}
+  0% {border-width: 2.4px; padding: .375rem .75rem;}
+  50% {border-width: 1px; padding: .250rem .25rem;}
+  100% {border-width: 2.4px; padding: .375rem .75rem;}
+
 }
 #recipeLink:hover {
   font-weight: 900;
@@ -96,13 +98,13 @@ button:hover {
   animation-iteration-count: infinite;
 }
 @keyframes hoverOverLink {
-  0% {box-shadow: rgb(44, 43, 43) 4px 4px;}
-  12% {box-shadow: rgb(54, 47, 47) 4px 0px;}
-  25% {box-shadow: rgb(66, 38, 38) 0px 4px;}
-  37% {box-shadow: rgb(59, 43, 95) 0px -4px;}
-  50% {box-shadow: rgb(72, 24, 94) -4px 0px;}
-  62% {box-shadow: rgb(66, 11, 11) -4px -4px;}
-  75% {box-shadow: rgb(52, 25, 78) 0px 4px;}
-  87% {box-shadow: rgb(77, 44, 44) 4px 0px;}
-  100% {box-shadow: rgb(44, 43, 43) 4px 4px;}
+  0% {box-shadow: rgb(44, 43, 43) 5px 5px;}
+  12% {box-shadow: rgb(54, 47, 47) 5px 0px;}
+  25% {box-shadow: rgb(66, 38, 38) 0px 5px;}
+  37% {box-shadow: rgb(59, 43, 95) 0px -5px;}
+  50% {box-shadow: rgb(72, 24, 94) -5px 0px;}
+  62% {box-shadow: rgb(66, 11, 11) -5px -5px;}
+  75% {box-shadow: rgb(52, 25, 78) 0px -5px;}
+  87% {box-shadow: rgb(77, 44, 44) 0px 5px;}
+  100% {box-shadow: rgb(44, 43, 43) 5px 5px;}
 }
