Tried to fix the favorites again.  More style changes.
Co-authored-by: justin1732 <justteach17@gmail.com>
Co-authored-by: Destiny Clarke <ynitsedekralc@gmail.com>

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,14 +9,14 @@
       <div class="col-8 offset-2 text-color">
         <h1>{{msg}}</h1>
         <div class="transparent-box"> 
-          <h2>This app is for searching for ingredients to figure out their nutritional value and also for looking up recipes by entering a few ingredients. Please search bar above to look for an ingredient, or click "recipe" to be taken to that page.</h2>
+          <h1>Welcome to Favorites:</h1>
         </div>
                 <!-- This is where you search -->
         <form class="clearfix mb-4" action="POST">
           
-        <h3>Homepage</h3>
-        <h1>Hello {{userName}}</h1>
-
+        <div class="transparent-box">      
+          <h2>All the indredients and recipes you've saved will appear on this page.</h2>        
+        </div>
          
         <ul id="food-list" class="list-group">
 {{!--                    
