--- a/views/recipe.handlebars
+++ b/views/recipe.handlebars
@@ -9,12 +9,11 @@
       <div class="col-8 offset-2 text-color">
         <h1>{{msg}}</h1>
         <div class="transparent-box">
-          <h2>This page is for searching recipes.</h2>
+          <h1>Recipes:</h1>
         </div>
                 <!-- This is where you search -->
         <form class="clearfix mb-4" action="POST">
           <div class="form-group">
-            <h2>Recipes Below</h2>
                           
                   </div>
                   
@@ -25,7 +24,7 @@
             <h1>{{this.title}}</h1>
             <button class="btn recipeAdd" id="recipeAddBtn" data-recipe="{{this.title}}">Add to Favorites</button>
             <div  id="recipeLink">
-            <h4><a href="{{this.href}}" target="_blank">See This Recipe</a></h4>
+            <h4><a href="{{this.href}}" id="recipeAddText" target="_blank">See This Recipe</a></h4>
             </div>
             <h3>{{this.ingredients}}</h3>
             <img src="{{this.thumbnail}}" alt="{{this.title}}" width="250px" height="200px"><br><br>
