--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -15,7 +15,7 @@ body {
    font-family: 'Mallanna', sans-serif;
   /* font-family: Verdana, Geneva, Tahoma, sans-serif; */
   font-weight: 24px;
-  /* text-shadow: 3px 2px 2px; */
+  text-shadow: black 2px 2px ;
 }
 .transparent-box{
   background-color:gray;
@@ -32,6 +32,7 @@ body {
   /* background-color: rgb(17, 16, 104); */
   background-color: rgb(45, 60, 192);
   color: aliceblue;
+  text-shadow: black 2px 2px;
   font-weight: bold;
   border-style: solid;
   border-color: rgb(238, 204, 12);
@@ -45,6 +46,7 @@ body {
   text-align: center;
   background-color: rgba(255, 255, 255, 0.75);
   color: aliceblue;
+  font-weight: bolder;
   border-style: solid;
   border-color: rgb(238, 223, 12);
   /* border-color: rgb(17, 117, 121); */
@@ -52,6 +54,10 @@ body {
   box-shadow: rgb(44, 43, 43) 4px 4px;
   margin: 10px;
   padding: 5px;
+}
+#recipeAddText {
+  font-weight: 900;
+  text-shadow: black 1px 1px;
 }
 
 #responseItem {
