--- a/views/ingredients.handlebars
+++ b/views/ingredients.handlebars
@@ -1,5 +1,6 @@
 <style>
-  body {background-image: url('https://www.bakingbusiness.com/ext/resources/2019/1/01142019/Ingredients2019.jpg?1547588432');}>
+  {{!-- body {background-image: url('https://www.bakingbusiness.com/ext/resources/2019/1/01142019/Ingredients2019.jpg?1547588432');}> --}}
+  body {background-image: url('https://i2.wp.com/blog.hellofresh.com.au/wp-content/uploads//2016/05/HF160322_Global_Blog_Essential-Italian-Ingredient-Guide_01_quer_low.jpg?fit=3180%2C2120&ssl=1');}
 </style>
 <div id="home"> 
   <div class="container">
@@ -7,10 +8,9 @@
       <div class="col-8 offset-2 text-color">
         <h1>{{msg}}</h1>
         <div class="transparent-box">
-          <h2>This is the webpage for searching and seeing about ingredients.</h2>
+          <h1>Ingredients:</h1>
         </div>
 
-        <h2>Ingredients Below</h2>
 
          
         <ul id="food-list" class="list-group">
